update Gameserver (Alpha Release)